--- a/plot/plot_schedules.ipynb
+++ b/plot/plot_schedules.ipynb
@@ -64,7 +64,7 @@
     "    for c in range(n_cycle):\n",
     "\n",
     "        v , i = start , 0\n",
-    "        while v <= stop:\n",
+    "        while v <= stop and (int(i + c * period) < n_epoch):\n",
     "            L[int(i+c*period)] = 1.0/(1.0+ np.exp(- (v*12.-6.)))\n",
     "            v += step\n",
     "            i += 1\n",
@@ -83,7 +83,7 @@
     "    for c in range(n_cycle):\n",
     "\n",
     "        v , i = start , 0\n",
-    "        while v <= stop:\n",
+    "        while v <= stop and (int(i + c * period) < n_epoch):\n",
     "            L[int(i+c*period)] = 0.5-.5*math.cos(v*math.pi)\n",
     "            v += step\n",
     "            i += 1\n",
